# yattag

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  setup.py  yattag_test.py
license/: COPYING
src/yattag/: __init__.py
test/: test_simpledoc.py  tests_doc.py  tests_indentation.py  tests_simpledoc.py
tests/: tests_doc.py  tests_indentation.py  tests_simpledoc.py
yattag/: __init__.py  attr_substitution.py  doc.py  indentation.py  simpledoc.py
